better kinect throughput

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
     "editor.insertSpaces": false,
     "files.associations": {
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "chrono": "cpp",
+        "ratio": "cpp"
     },
     "editor.wrappingIndent": "indent",
     "editor.wordWrap": "on"
