migrating some parameters and transforms into the state struct

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,9 @@
         "functional": "cpp",
         "algorithm": "cpp",
         "xiosbase": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "locale": "cpp",
+        "string": "cpp"
     },
     "editor.wrappingIndent": "indent",
     "editor.wordWrap": "on"
