separate the state for rendering creatuers from the state for simulating them, so that we can be more econonical with memory, and also so that the number of living creatures (or parts thereof) can vary dynamically

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,13 @@
         "bitset": "cpp",
         "iterator": "cpp",
         "map": "cpp",
-        "__locale": "cpp"
+        "__locale": "cpp",
+        "memory": "cpp",
+        "type_traits": "cpp",
+        "__functional_base": "cpp",
+        "atomic": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp"
     },
     "editor.wrappingIndent": "indent",
     "editor.wordWrap": "on"
